Feb 15 2013	Masayoshi Mizutani <mizutani@sfc.wide.ad.jp>
	0.3.3
	* src/proto/tcp_ssn.cc: Support basic state transition
	* Fixed several bugs of protocol decoders

Jan 3 2013	Masayoshi Mizutani <mizutani@sfc.wide.ad.jp>
	0.3.2.1
	* src/proto/tcp_ssn.cc: TCP session decoder, still implementing.
	* test/TcpSession.cc: Test for TCP state transition and sequence number management. Still implementing.

Dec 7 2013	Masayoshi Mizutani <mizutani@sfc.wide.ad.jp>
	0.3.2
	* Chnage build framework from waf to cmake
	* app/overseer.cc: Sample application of network observation

Nov 10 2013	Masayoshi Mizutani <mizutani@sfc.wide.ad.jp>
	0.3.1
	* src/proto/lcc.cc: Linux Cooked Capture Decoder
	* src/proto/pppoe.cc: PPP over Ethernet Decoder
	* src/utils/lru-hash.[cc,h]: LRU hash table for session management

Oct 22 2013	Masayoshi Mizutani <mizutani@sfc.wide.ad.jp>
	* Start to write ChangeLog from version 0.3.0